Novas alterções no formulário
Inclusão da página de login e algumas rotas para "linkar" o  front end

--- a/CadastroDeCandidatos/Views/Candidato/Criar.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Criar.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Cadastro";
+    ViewData["Title"] = "Cadastrar novo Candidato";
 }
 
 <div class="text-center">
@@ -34,6 +34,8 @@
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
     </div>
 
+<h3>Marque os Conhecimentos que possui</h3>
+
 <div class="block">
 
     <div class="form-check">
@@ -62,7 +64,7 @@
 
         <div class="form-check">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
-        <label class="form-check-label" for="inlineCheckbox6">JavaScript</label>
+        <label class="form-check-label" for="inlineCheckbox6">Asp.NET</label>
         </div>
 
      </div>
