--- a/CadastroDeCandidatos/Views/Candidato/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Index.cshtml
@@ -20,8 +20,6 @@
     }
 
 
-
-
 <div class="text-center">
     <h1 class="display-4">Banco de Talentos</h1>
 
@@ -54,8 +52,8 @@
       <td>Python</td>
       <td>
          <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning">Editar</a>
-              <a role="button" class="btn btn-secondary">Apagar</a>
+              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
+              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
          </div>
       </td>
     </tr>
@@ -66,8 +64,8 @@
       <td>JavaScript</td>
       <td>
            <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning">Editar</a>
-              <a role="button" class="btn btn-secondary">Apagar</a>
+              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
+              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
          </div>
       </td>
     </tr>
@@ -77,9 +75,9 @@
       <td>teste@teste</td>
       <td>Kotlin</td>
       <td>
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning">Editar</a>
-              <a role="button" class="btn btn-secondary">Apagar</a>
+         <div class="btn-group" role="group" aria-label="Basic example">
+              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
+              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
          </div>
       </td>
     </tr>
@@ -90,8 +88,8 @@
       <td>c#</td>
       <td>
           <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning">Editar</a>
-              <a role="button" class="btn btn-secondary">Apagar</a>
+              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
+              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
          </div>
       </td>
     </tr>
