--- a/CadastroDeCandidatos/Views/Login/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Login/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@{
-    ViewData["Title"] = "Cadastro";
+    ViewData["Title"] = "Login";
 }
 
 <div class="text-center">
     <h1 class="display-4">Entre!</h1>
-  
+ 
+    <br />
+
+    <h2>Ainda nao tem cadastro? 
+
+        <br />
+
+        Cadastre-se gratuitamente!</h2>
+
+    <a class="btn btn-success" asp-area="" asp-controller="Candidato" asp-action="Criar">Cadastre-se</a>
+    
+
 </div>
