conexao com banco de dados criada

--- a/CadastroDeCandidatos/Views/Candidato/ApagarConfirmacao.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/ApagarConfirmacao.cshtml
@@ -3,10 +3,10 @@
 }
 <div class="text-center">
     <h3 class="display-4">Deseja realmente Apagar os dados selecionados?</h3>
-</div
+</div>
 
 <br />
 
-<a class="btn btn-secondary btn-block role="button">Cancelar Exclusão</a>
-<a class="btn btn-danger btn-block role="button">Confirmar Exclusão</a>
+<a class="btn btn-info btn-block role="button" asp-controller="Candidato" asp-action="Index">Cancelar Exclusão</a>
+<a class="btn btn-danger btn-block role="button" asp-controller="Candidato" asp-action="Apagar">Confirmar Exclusão</a>
 
