--- a/CadastroDeCandidatos/wwwroot/css/site.css
+++ b/CadastroDeCandidatos/wwwroot/css/site.css
@@ -25,6 +25,7 @@ a {
 }
 
 /* Sticky footer styles
+
 -------------------------------------------------- */
 html {
   font-size: 14px;
@@ -35,9 +36,11 @@ html {
   }
 }
 
+
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
 }
@@ -54,13 +57,16 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background: linear-gradient(45deg,aqua,lightblue);
+
 }
 .footer {
   position: absolute;
@@ -68,4 +74,8 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.div-container{
+  color:cadetblue
 }
