--- a/CadastroDeCandidatos/Views/Candidato/Criar.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CandidatoModel
+@{
     ViewData["Title"] = "Cadastrar novo Candidato";
 }
 
@@ -7,31 +8,28 @@
 
 </div>
 
-<form>
+<form asp-controller="Candidato" asp-action="Criar" metodo="post">
+
      <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" class="form-control" placeholder="Digite o seu nome">
+            <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o seu nome">
      </div>
 
      <div class="form-group">
             <label for="celular">Celular</label>
-            <input type="text" class="form-control" placeholder="Digite o seu celular">
+            <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o seu celular">
      </div>
 
+      
      <div class="form-group">
-            <label for=nome>Conhecimentos</label>
-            <input type="text" class="form-control" placeholder="Informe os seus conhecimentos em tecnologia">
-      </div>   
-
-      <div class="form-group">
             <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu Email">
-            <small id="emailHelp" class="form-text text-muted">Suas informações pessoais estão seguras conosco</small>
+            <input type="email" asp-for="Email" class="form-control" aria-describedby="emailHelp" placeholder="Digite seu Email">
+            <small id="emailHelp" asp-for="Email" class="form-text text-muted">Suas informações pessoais estão seguras conosco</small>
      </div>
 
     <div class="form-group">
             <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha">
+            <input type="password" asp-for="Senha"  class="form-control" placeholder="Digite sua senha">
     </div>
 
 <h3>Marque os Conhecimentos que possui</h3>
@@ -39,31 +37,31 @@
 <div class="block">
 
     <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <input class="form-check-input" asp-for="Conhecimento" type="checkbox" id="inlineCheckbox1" value="Python">
             <label class="form-check-label" for="inlineCheckbox1">Python</label>
      </div>
 
     <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <input class="form-check-input" asp-for="Conhecimento" type="checkbox" id="inlineCheckbox2" value="C#">
             <label class="form-check-label" for="inlineCheckbox2">C#</label>
      </div>
 
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+        <input class="form-check-input" asp-for="Conhecimento" type="checkbox" id="inlineCheckbox3" value="Java">
         <label class="form-check-label" for="inlineCheckbox3">Java</label>
         </div>
         <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+        <input class="form-check-input" asp-for="Conhecimento" type="checkbox" id="inlineCheckbox4" value="Kotlin">
         <label class="form-check-label" for="inlineCheckbox4">Kotlin</label>
         </div>
 
         <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+        <input class="form-check-input" asp-for="Conhecimento" type="checkbox" id="inlineCheckbox5" value="JavaScript">
         <label class="form-check-label" for="inlineCheckbox5">JavaScript</label>
         </div>
 
         <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
+        <input class="form-check-input" asp-for="Conhecimento" type="checkbox" id="inlineCheckbox6" value="Asp.NET">
         <label class="form-check-label" for="inlineCheckbox6">Asp.NET</label>
         </div>
 
