--- a/CadastroDeCandidatos/Views/Candidato/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<CandidatoModel>
+@{
     ViewData["Title"] = "Banco de Talentos";
 }
 
@@ -40,59 +41,33 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col">Nome</th>
+      <th scope="col">Celular</th>
       <th scope="col">Email</th>
       <th scope="col">Conhecimentos</th>
     </tr>
   </thead>
   <tbody>
-      <tr>
-      <th scope="row">1</th>
-      <td>Melissa</td>
-      <td>teste@teste</td>
-      <td>Python</td>
-      <td>
-         <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
-              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
-         </div>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Andre</td>
-      <td>teste@teste</td>
-      <td>JavaScript</td>
-      <td>
-           <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
-              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
-         </div>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Jacob</td>
-      <td>teste@teste</td>
-      <td>Kotlin</td>
-      <td>
-         <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
-              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
-         </div>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">4</th>
-      <td>Maria</td>
-      <td>teste@teste</td>
-      <td>c#</td>
-      <td>
-          <div class="btn-group" role="group" aria-label="Basic example">
-              <a role="button" class="btn btn-warning" asp-controller="Candidato" asp-action="Editar">Editar</a>
-              <a role="button" class="btn btn-secondary" asp-controller="Candidato" asp-action="ApagarConfirmacao">Apagar</a>
-         </div>
-      </td>
-    </tr>
-  </tbody>
+            @if(Model != null && Model.Any())
+            {
+                foreach (CandidatoModel candidato in Model)
+                {
+                    <tr>
+                      <th scope="row">@candidato.Id</th>
+                      <td>@candidato.Nome</td>
+                      <td>@candidato.Celular</td>
+                      <td>@candidato.Email</td>
+                      <td>@candidato.Conhecimento</td>
+                      <td>
+                         <div class="btn-group" role="group" aria-label="Basic example">
+                              <a role="button" class="btn btn-warning" asp-route-id="@candidato.Id" asp-controller="Candidato" 
+                                asp-action="Editar">Editar</a>
+                              <a role="button" class="btn btn-secondary" asp-route-id="@candidato.Id" asp-controller="Candidato"
+                                asp-action="ApagarConfirmacao">Apagar</a>
+                         </div>
+                      </td> 
+                  </tr>
+                }
+            }
+        </tbody>
 </table> 
 </div>
