Adicionada a pagina Login
Criada pagina de login de usuario + senha + rota para cadastro
Necessario criar rota e banco de Dados para Usuarios e uma interface com ações exclusivas.
Etc.

--- a/CadastroDeCandidatos/Views/Login/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Login/Index.cshtml
@@ -6,6 +6,29 @@
     <h1 class="display-4">Entre!</h1>
  
     <br />
+          
+<main class="container"> 
+    
+    <form action="">
+        <div class="form-group">
+            <label for="usuario"></label>
+            <input type="text" class="form-control" placeholder="Digite seu Nome de Usuario">
+            <div class="underline"></div>
+        </div>
+
+        <br />
+
+        <div class="input-field">
+            <label for="senha"></label>
+            <input type="password" class="form-control" placeholder="Digite sua Senha">
+            <div class="underline"></div>
+        </div>
+     
+        <input type="submit" value="Continue">
+    </form>
+</main>
+
+<div>
 
     <h2>Ainda nao tem cadastro? 
 
@@ -16,4 +39,5 @@
     <a class="btn btn-success" asp-area="" asp-controller="Candidato" asp-action="Criar">Cadastre-se</a>
     
 
+</div>
 </div>
