--- a/CadastroDeCandidatos/Views/Candidato/Editar.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Editar.cshtml
@@ -35,31 +35,31 @@
 <div class="block">
 
     <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Python">
             <label class="form-check-label" for="inlineCheckbox1">Python</label>
      </div>
 
     <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="C#">
             <label class="form-check-label" for="inlineCheckbox2">C#</label>
      </div>
 
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Java">
         <label class="form-check-label" for="inlineCheckbox3">Java</label>
         </div>
         <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="Kotlin">
         <label class="form-check-label" for="inlineCheckbox4">Kotlin</label>
         </div>
 
         <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="JavaScript">
         <label class="form-check-label" for="inlineCheckbox5">JavaScript</label>
         </div>
 
         <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="Asp.NET">
         <label class="form-check-label" for="inlineCheckbox6">Asp.NET</label>
         </div>
 
