--- a/CadastroDeCandidatos/wwwroot/css/site.css
+++ b/CadastroDeCandidatos/wwwroot/css/site.css
@@ -76,6 +76,65 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-div-container{
-  color:cadetblue
+div-container {
+    color: cadetblue;
 }
+
+
+
+
+main.container {
+    background: white;
+    max-width: 350px;
+    min-height: 40vh;
+    padding: 2rem;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    border-radius: 8px;
+}
+
+main h2 {
+    font-weight: 600;
+    margin-bottom: 2rem;
+    position: relative;
+}
+
+main h2 {
+    font-weight: 600;
+    margin-bottom: 2rem;
+    position: relative;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-field {
+    position: relative;
+}
+
+.input-field input {
+        outline: none;
+        font-size: 18px;
+        color: rgba(0,0,0,0.7);
+    }
+
+.input-field input::placeholder {
+            color: rgba(0,0,0,0.7);
+        }
+
+form input[type="submit"] {
+    margin-top: 2rem;
+    padding: 0.4rem;
+    background: linear-gradient(to left,#4776E6,#8e54e9);
+    color: white;
+    font-size: 0.9rem;
+    font-weight: 300;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+form input[type="submit"]:hover {
+        letter-spacing: 5px;
+        background: linear-gradient(to right,#4776E6,#8e54e9);
+    }
