--- a/CadastroDeCandidatos/Views/Candidato/Editar.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Editar.cshtml
@@ -1,73 +1,48 @@
-﻿@{
+﻿@model CandidatoModel
+@{
     ViewData["Title"] = "Editar Cadastro";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Atualize os dados do candidato</h1>
+    <h1 class="display-4">Atualize os dados do Candidato</h1>
 
 </div>
 
-<form>
+<form asp-controller="Candidato" asp-action="Atualizar" metodo="post">
+
+    <input type="hidden" asp-for="Id" />
      <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" class="form-control" placeholder="Digite o seu nome">
+            <input type="text" asp-for="Nome" class="form-control" placeholder="Digite o seu nome">
      </div>
 
      <div class="form-group">
             <label for="celular">Celular</label>
-            <input type="text" class="form-control" placeholder="Digite o seu celular">
+            <input type="text" asp-for="Celular" class="form-control" placeholder="Digite o seu celular">
      </div>
 
+      
      <div class="form-group">
-            <label for=nome>Conhecimentos</label>
-            <input type="text" class="form-control" placeholder="Informe os seus conhecimentos em tecnologia">
-      </div>   
-
-      <div class="form-group">
             <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu Email">
-            <small id="emailHelp" class="form-text text-muted">Suas informações pessoais estão seguras conosco</small>
+            <input type="email" asp-for="Email" class="form-control" aria-describedby="emailHelp" placeholder="Digite seu Email:">
+            <small id="emailHelp" asp-for="Email" class="form-text text-muted">Suas informações pessoais estão seguras conosco</small>
      </div>
-    
+
+    <div class="form-group">
+            <label for="exampleInputPassword1">Senha</label>
+            <input type="password" asp-for="Senha"  class="form-control" placeholder="Digite sua senha:">
+    </div>
 
 <h3>Marque os Conhecimentos que possui</h3>
 
-<div class="block">
-
-    <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Python">
-            <label class="form-check-label" for="inlineCheckbox1">Python</label>
-     </div>
-
-    <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="C#">
-            <label class="form-check-label" for="inlineCheckbox2">C#</label>
-     </div>
-
-    <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Java">
-        <label class="form-check-label" for="inlineCheckbox3">Java</label>
-        </div>
-        <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="Kotlin">
-        <label class="form-check-label" for="inlineCheckbox4">Kotlin</label>
-        </div>
-
-        <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="JavaScript">
-        <label class="form-check-label" for="inlineCheckbox5">JavaScript</label>
-        </div>
-
-        <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="Asp.NET">
-        <label class="form-check-label" for="inlineCheckbox6">Asp.NET</label>
-        </div>
-
+<div class="form-group">
+            <label for="conhecimento">Conhecimentos</label>
+            <input type="text" asp-for="Conhecimento" class="form-control" placeholder="Informe os conhecimentos que voce possui:">
      </div>
 
 <br />
 
-      <button type="submit" class="btn btn-success btn-block">Alterar</button>
+      <button type="submit" class="btn btn-success btn-block">Aualizar</button>
       <a class="btn btn-secondary btn-block" asp-controller="Candidato" asp-action="Index" role="button">Voltar</a>
 
 
