--- a/CadastroDeCandidatos/Views/Candidato/Editar.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Editar.cshtml
@@ -8,7 +8,7 @@
 
 </div>
 
-<form asp-controller="Candidato" asp-action="Atualizar" metodo="post">
+<form asp-controller="Candidato" asp-action="Alterar" metodo="post">
 
     <input type="hidden" asp-for="Id" />
      <div class="form-group">
@@ -37,7 +37,8 @@
 
 <div class="form-group">
             <label for="conhecimento">Conhecimentos</label>
-            <input type="text" asp-for="Conhecimento" class="form-control" placeholder="Informe os conhecimentos que voce possui:">
+            <input type="text" asp-for="Conhecimento" class="form-control" 
+            placeholder="Informe os conhecimentos que voce possui:">
      </div>
 
 <br />
