--- a/CadastroDeCandidatos/wwwroot/css/site.css
+++ b/CadastroDeCandidatos/wwwroot/css/site.css
@@ -80,9 +80,6 @@ div-container {
     color: cadetblue;
 }
 
-
-
-
 main.container {
     background: white;
     max-width: 350px;
@@ -138,3 +135,6 @@ form input[type="submit"]:hover {
         letter-spacing: 5px;
         background: linear-gradient(to right,#4776E6,#8e54e9);
     }
+.field-validation-error{
+    color: #ef0a0a;
+}
