CRIANDO BOTOES PARA FECHAR ALERTAS
AINDA NAO TERMINEI

--- a/CadastroDeCandidatos/Views/Candidato/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Index.cshtml
@@ -4,6 +4,14 @@
 }
 
 
+<div class="alert alert-info" role="alert">
+    <button type="button" class="btn btn-danger btn-sm colose-alert" arial-laabel="Close">X</button>
+  Sucesso!
+</div>
+<div class="alert alert-danger" role="alert">
+  Erro!
+</div>
+
 
 
 <div class="text-center">
