BOTÃO CLOSE ALERT CRIADO
Criado o botão close alert, falta agregar funcionalidades

--- a/CadastroDeCandidatos/Views/Candidato/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Index.cshtml
@@ -5,10 +5,11 @@
 
 
 <div class="alert alert-info" role="alert">
-    <button type="button" class="btn btn-danger btn-sm colose-alert" arial-laabel="Close">X</button>
+    <button type="button" class="btn btn-danger btn-sm colose-alert" arial-label="Close">X</button>
   Sucesso!
 </div>
 <div class="alert alert-danger" role="alert">
+    <button type="button" class="btn btn-danger btn-sm colose-alert" arial-label="Close">X</button>
   Erro!
 </div>
 
