--- a/CadastroDeCandidatos/wwwroot/css/site.css
+++ b/CadastroDeCandidatos/wwwroot/css/site.css
@@ -138,3 +138,12 @@ form input[type="submit"]:hover {
 .field-validation-error{
     color: #ef0a0a;
 }
+
+.close-alert{
+    position:absolute;
+    right:-10px;
+    top:-15px;
+    border-radius: 15px;
+    width:30px;
+    height:31px;
+}
