--- a/CadastroDeCandidatos/Views/Candidato/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Candidato/Index.cshtml
@@ -4,15 +4,6 @@
 }
 
 
-<div class="alert alert-info" role="alert">
-    <button type="button" class="btn btn-danger btn-sm colose-alert" arial-label="Close">X</button>
-  Sucesso!
-</div>
-<div class="alert alert-danger" role="alert">
-    <button type="button" class="btn btn-danger btn-sm colose-alert" arial-label="Close">X</button>
-  Erro!
-</div>
-
 
 
 <div class="text-center">
@@ -25,6 +16,22 @@
             <a class="btn btn-success"role="button" asp-controller="Candidato" asp-action="Criar">Adicionar um novo Candidato</a>
         </div>
 </div>
+
+    @if(TempData["MensagemSucesso"] != null)
+    {
+       <div class="alert alert-info" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Close">X</button>
+            @TempData["MensagemSucesso"]
+        </div>
+    }
+
+    @if(TempData["MensagemErro"] != null)
+    {
+      <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Close">X</button>
+            @TempData["MensagemErro"]
+        </div>
+    }
 
 
 <br />
