--- a/CadastroDeCandidatos/Views/Login/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Login/Index.cshtml
@@ -1,30 +1,44 @@
-﻿@{
+﻿@model LoginModel
+@{
+    Layout = "_LayoutDeslogado";
     ViewData["Title"] = "Login";
 }
+
+  <br />
 
 <div class="text-center">
     <h1 class="display-4">Entre!</h1>
  
     <br />
+
+@if(TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" arial-label="Close">X</button>
+            @TempData["MensagemErro"]
+        </div>
+    }
+
           
 <main class="container"> 
     
-    <form action="">
+    <form asp-controller="Login" asp-action="Entrar" method="post">
         <div class="form-group">
-            <label for="usuario"></label>
-            <input type="text" class="form-control" placeholder="Digite seu Nome de Usuario">
-            <div class="underline"></div>
+            <label for="login" class="form-label">Login</label>
+            <input type="text" asp-for="Login" id="login" class="form-control" placeholder="Digite seu Nome de Usuario">           
+            @Html.ValidationMessageFor(x => x.Login)
         </div>
 
         <br />
 
         <div class="input-field">
-            <label for="senha"></label>
-            <input type="password" class="form-control" placeholder="Digite sua Senha">
-            <div class="underline"></div>
+            <label for="senha">Senha</label>
+            <input type="password" asp-for="Senha" id="senha" class="form-control" placeholder="Digite sua Senha">            
+            @Html.ValidationMessageFor(x => x.Senha)
+
         </div>
      
-        <input type="submit" value="Continue">
+        <input type="submit" value="Entrar">
     </form>
 </main>
 
