CRIANDO SESSOES LOGADO/DESLOGADO
FASE 1

--- a/CadastroDeCandidatos/Views/Shared/_Layout.cshtml
+++ b/CadastroDeCandidatos/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - RH Grupo Services - <a asp-area="" asp-controller="Login" asp-action="Index">Cadastre-se</a>
+            &copy; 2022 - RH Grupo Services - <a asp-area="" asp-controller="Candidato" asp-action="Index">Cadastre-se</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
