--- a/CadastroDeCandidatos/Views/Shared/_LayoutDeslogado.cshtml
+++ b/CadastroDeCandidatos/Views/Shared/_LayoutDeslogado.cshtml
@@ -20,7 +20,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - RH Grupo Services -
+            &copy; 2022 - RH Grupo Services
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
