Nova imagem para layout
ta ganhando forma, mas hoje estou meio devagar

--- a/CadastroDeCandidatos/Views/Home/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Home/Index.cshtml
@@ -6,4 +6,8 @@
     <h1 class="display-4">Grupo Services</h1>
     <p><h2>Aqui o seu Talento tem Valor</h2></p>
     <hr />
+
+    <div class="align-center">
+        <img src="https://thumbs.dreamstime.com/b/services-concept-flat-line-design-icons-elements-modern-services-concept-s-collection-services-concept-lettering-thin-68961333.jpg" class="img-thumbnail" alt="200">
+    </div>
 </div>
