--- a/CadastroDeCandidatos/Views/Home/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Grupo Services</h1>
+    <h1 class="display-4">Grupo Services RH</h1>
     <p><h2>Aqui o seu Talento tem Valor</h2></p>
     <hr />
 
