--- a/CadastroDeCandidatos/Views/Login/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Login/Index.cshtml
@@ -39,6 +39,11 @@
         </div>
      
         <input type="submit" value="Entrar">
+
+        <br/>
+        <h3>Ainda nao possui uma conta? Cadastre-se gratuitamente!</h3>
+         <a class="btn btn-success"role="button" asp-controller="Login" asp-action="Criar">Cadastre-se</a>
+
     </form>
 </main>
 </div>
