--- a/CadastroDeCandidatos/Views/Login/Index.cshtml
+++ b/CadastroDeCandidatos/Views/Login/Index.cshtml
@@ -38,12 +38,11 @@
 
         </div>
      
-        <input type="submit" value="Entrar">
+        <input type="submit" value="Entrar"/>
 
         <br/>
         <h3>Ainda nao possui uma conta? Cadastre-se gratuitamente!</h3>
-         <a class="btn btn-success"role="button" asp-controller="Login" asp-action="Criar">Cadastre-se</a>
-
+        <button type="submit" asp-controller="Login" asp-action="Criar">Cadastrar</button>
     </form>
 </main>
 </div>
